--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "builds": [{
-      "src": "personal_doc/wsgi.py",
+      "src": "personal_doc/personal_doc/wsgi.py",
       "use": "@ardnt/vercel-python-wsgi",
-      "config": { "maxLambdaSize": "15mb" }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
   }],
   "routes": [
       {
           "src": "/(.*)",
-          "dest": "personal_doc/wsgi.py"
+          "dest": "personal_doc/personal_doc/wsgi.py"
       }
   ]
 }
